--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -18,12 +18,12 @@
                   <div class="campos_info">
                     <mat-form-field class="example-full-width"  appearance="fill">
                         <mat-label>Nombre</mat-label>
-                        <input matInput>
+                        <input matInput formControlName="nombreMascota">
                     </mat-form-field>
                 
                     <mat-form-field class="example-full-width"  appearance="fill">
                         <mat-label>Especie</mat-label>
-                        <mat-select>
+                        <mat-select formControlName="especie">
                             <mat-option value="hembra">PERRO</mat-option>
                             <mat-option value="macho">GATO</mat-option> 
                             <mat-option value="hembra">HANSTER</mat-option>
@@ -35,12 +35,12 @@
                     
                     <mat-form-field class="example-full-width"  appearance="fill"> 
                         <mat-label>Raza</mat-label>
-                        <input matInput> 
+                        <input matInput formControlName="raza"> 
                     </mat-form-field>
                     
                     <mat-form-field class="example-full-width"  appearance="fill">
                         <mat-label>Sexo</mat-label>
-                        <mat-select>
+                        <mat-select formControlName="sexo">
                             <mat-option value="hembra">HEMBRA</mat-option>
                             <mat-option value="macho">MACHO</mat-option> 
                         </mat-select>
@@ -48,7 +48,7 @@
              
                     <mat-form-field class="example-full-width"  appearance="fill">
                         <mat-label>Fecha Nacimiento</mat-label> 
-                        <input matInput [matDatepicker]="picker">
+                        <input matInput [matDatepicker]="picker" formControlName="fechaNacimiento">
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker> 
                     </mat-form-field>
@@ -56,12 +56,12 @@
                     <mat-form-field class="example-full-width"  appearance="fill">
                         <mat-label>Celular</mat-label>
                         <span matPrefix>+51 &nbsp;</span>
-                        <input   maxlength="9" matInput placeholder="935 562 582"   (keypress)="onSoloNumeros($event)">
+                        <input   maxlength="9" formControlName="celular" matInput placeholder="935 562 582"   (keypress)="onSoloNumeros($event)">
                     </mat-form-field>
                 
                     <mat-form-field class="example-full-width"  appearance="fill">
                         <mat-label>Email</mat-label>
-                        <input matInput>
+                        <input matInput  formControlName="email" >
                     </mat-form-field>
 
                 </div>
@@ -96,67 +96,67 @@
                     <div class="campos_info">
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Cara</mat-label>
-                            <input matInput>
+                            <input matInput  formControlName="c_cara" >
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Nariz</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_nariz">
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Orejas</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_oreja">
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Mandibula Inferior</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_mandibula_inferior">
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Mandibula Superior</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_mandibula_superior">
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label> Pecho</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_pecho">
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Esplada</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_espalda">
                         </mat-form-field>
                      
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Pata Delantera Derecha</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_pata_delantera_derecha">
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Pata Delantera Izquierda</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_pata_delantera_izquierda">
                         </mat-form-field>
                       
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Pata Trasera Derecha</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_pata_trasera_derecha">
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label>Pata Trasera Izquierda</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_pata_trasera_izquierda">
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label> Cola</mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_cola">
                         </mat-form-field>
                      
                         <mat-form-field class="example-full-width"  appearance="fill">
                             <mat-label> Ojos </mat-label>
-                            <input matInput>
+                            <input matInput formControlName="c_ojos">
                         </mat-form-field>
 
                     </div>
@@ -167,15 +167,14 @@
                     <mat-expansion-panel-header>
                         <div class="datosAcordion">
                             <mat-icon>room</mat-icon>
-                            <p> Mi Dirección</p>
+                            <p> Mi Dirección *</p>
                         </div>  
                     </mat-expansion-panel-header>
 
                     <mat-form-field appearance="fill" style="display: grid;">
                       <mat-label>Dirección</mat-label>
-                      <input matInput >
-                    </mat-form-field>
-                    <mat-datepicker #picker></mat-datepicker>
+                      <input matInput formControlName="direccion">
+                    </mat-form-field> 
                 </mat-expansion-panel>
 
 
@@ -199,7 +198,7 @@
                         accept="image/*" multiple (change)="selectFiles($event)" #fileAdjuntar/>
  
                     </div>
-
+ 
 
                     <div *ngIf="ImgAdjunto">
                         <img [src]="ImgAdjunto" class="preview">
@@ -213,8 +212,16 @@
 
 
             <div class="botones">
-                <button mat-raised-button color="primary">Guardar Datos</button>
-                <button mat-raised-button color="warn">Volver</button>
+                <div>
+                    <button mat-raised-button color="primary" [disabled]="!Form.valid || !ImgAdjunto" class="btn_guardar_post" (click)="onSave()">   
+                        <mat-icon>save</mat-icon>
+                       {{ !Form.disabled ? ( datosMascotaLocal ? 'Guardar Datos' : 'Editar Datos') : 'GUARDANDO....' }} 
+                    </button> 
+                    <mat-progress-spinner *ngIf="Form.disabled" [diameter]="24" [mode]="'indeterminate'"> 
+                    </mat-progress-spinner>  
+                </div>
+ 
+                <button mat-raised-button color="warn" (click)="onVolver()">Volver</button>
             </div>
      
         </form>
