--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -24,12 +24,12 @@
                     <mat-form-field class="example-full-width"  appearance="fill">
                         <mat-label>Especie</mat-label>
                         <mat-select formControlName="especie">
-                            <mat-option value="hembra">PERRO</mat-option>
-                            <mat-option value="macho">GATO</mat-option> 
-                            <mat-option value="hembra">HANSTER</mat-option>
-                            <mat-option value="macho">GALLO</mat-option> 
-                            <mat-option value="hembra">POLLO</mat-option>
-                            <mat-option value="macho">CERDO</mat-option> 
+                            <mat-option value="perro">PERRO</mat-option>
+                            <mat-option value="gato">GATO</mat-option> 
+                            <mat-option value="hanster">HANSTER</mat-option>
+                            <mat-option value="gallo">GALLO</mat-option> 
+                            <mat-option value="pollo">POLLO</mat-option>
+                            <mat-option value="cerdo">CERDO</mat-option> 
                         </mat-select>
                     </mat-form-field>
                     
